--- a/README.Rmd
+++ b/README.Rmd
@@ -67,8 +67,10 @@ cv1 <- crossv_kfold(mtcars, 5)
 # Monte Carlo cross-validation
 cv2 <- crossv_mc(mtcars, 100)
 
-head(boot, 1)
-head(cv1, 1)
-head(cv2, 1)
+dim(boot$strap[[1]])
+dim(cv1$train[[1]])
+dim(cv1$test[[1]])
+dim(cv2$train[[1]])
+dim(cv2$test[[1]])
 ```
 
