--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,10 @@ output:
     variant: markdown_github
 ---
 
+```{r, echo = FALSE}
+knitr::opts_chunk$set(collapse = TRUE, comment = "#>")
+```
+
 # modelr
 
 [![Travis-CI Build Status](https://travis-ci.org/hadley/modelr.svg?branch=master)](https://travis-ci.org/hadley/modelr)
