--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ You can install modelr from github with:
 
 ```
 # install.packages("devtools")
-devtools::install_github("hadley/modelr")
+devtools::install_github("tidyverse/modelr")
 ```
 
 Alternatively, modelr is available as part of [the tidyverse package](http://blog.revolutionanalytics.com/2016/09/tidyverse.html) which can be installed via:
