--- a/README.Rmd
+++ b/README.Rmd
@@ -114,3 +114,7 @@ mtcars_mod <- lm(mpg ~ wt + cyl + vs, data = mtcars)
 data_grid(mtcars, wt = seq_range(wt, 10), cyl, vs) %>% add_predictions(mtcars_mod)
 ```
 
+## Code of conduct
+
+Please note that this project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md).
+By participating in this project you agree to abide by its terms.
