--- a/README.Rmd
+++ b/README.Rmd
@@ -7,7 +7,7 @@ knitr::opts_chunk$set(collapse = TRUE, comment = "#>")
 set.seed(1014)
 ```
 
-# modelr
+# modelr <img src="man/figures/logo.png" align="right" />
 
 [![lifecycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
 [![CRAN status](https://www.r-pkg.org/badges/version/modelr)](https://cran.r-project.org/package=modelr)
