--- a/README.Rmd
+++ b/README.Rmd
@@ -9,10 +9,11 @@ set.seed(1014)
 
 # modelr <img src="man/figures/logo.png" align="right" />
 
-[![lifecycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
-[![CRAN status](https://www.r-pkg.org/badges/version/modelr)](https://cran.r-project.org/package=modelr)
-[![Travis-CI Build Status](https://travis-ci.org/tidyverse/modelr.svg?branch=master)](https://travis-ci.org/tidyverse/modelr)
-[![codecov](https://codecov.io/gh/tidyverse/modelr/branch/master/graph/badge.svg)](https://codecov.io/gh/tidyverse/modelr)
+<!-- badges: start -->
+[![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
+[![Travis build status](https://travis-ci.org/hadley/modelr.svg?branch=master)](https://travis-ci.org/hadley/modelr)
+[![Codecov test coverage](https://codecov.io/gh/hadley/modelr/branch/master/graph/badge.svg)](https://codecov.io/gh/hadley/modelr?branch=master)
+<!-- badges: end -->
 
 The modelr package provides functions that help you create elegant pipelines when modelling. 
 It is designed primarily to support teaching the basics of modelling within the tidyverse, particularly in [R for Data Science](http://r4ds.had.co.nz/model-basics.html).
