--- a/README.Rmd
+++ b/README.Rmd
@@ -98,7 +98,7 @@ A set of functions let you seamlessly add predictions and residuals as additiona
 
 ```{r}
 set.seed(1014)
-df <- tibble::data_frame(
+df <- tibble::tibble(
   x = sort(runif(100)),
   y = 5 * x + 0.5 * x ^ 2 + 3 + rnorm(length(x))
 )
