Cross-link to tidymodels

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,9 @@ set.seed(1014)
 ## Overview
 
 The modelr package provides functions that help you create elegant pipelines when modelling. 
-It is designed primarily to support teaching the basics of modelling within the tidyverse, particularly in [R for Data Science](http://r4ds.had.co.nz/model-basics.html).
+It is designed primarily to support teaching the basics of modelling within the tidyverse, particularly in [R for Data Science](http://r4ds.had.co.nz/model-basics.html). 
+
+Please see <http://tidymodels.org/> for a more comprehensive framework for modelling within the tidyverse.
 
 ## Installation
 
