--- a/README.Rmd
+++ b/README.Rmd
@@ -10,17 +10,17 @@ set.seed(1014)
 # modelr <img src="man/figures/logo.png" align="right" />
 
 <!-- badges: start -->
-[![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
+[![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable)
 [![R build status](https://github.com/tidyverse/modelr/workflows/R-CMD-check/badge.svg)](https://github.com/tidyverse/modelr/actions)
-[![Codecov test coverage](https://codecov.io/gh/tidyverse/modelr/branch/master/graph/badge.svg)](https://codecov.io/gh/tidyverse/modelr?branch=master)
+[![Codecov test coverage](https://codecov.io/gh/tidyverse/modelr/branch/master/graph/badge.svg)](https://app.codecov.io/gh/tidyverse/modelr?branch=master)
 <!-- badges: end -->
 
 ## Overview
 
 The modelr package provides functions that help you create elegant pipelines when modelling. 
-It is designed primarily to support teaching the basics of modelling within the tidyverse, particularly in [R for Data Science](http://r4ds.had.co.nz/model-basics.html). 
+It is designed primarily to support teaching the basics of modelling within the tidyverse, particularly in [R for Data Science](https://r4ds.had.co.nz/model-basics.html). 
 
-Please see <http://tidymodels.org/> for a more comprehensive framework for modelling within the tidyverse.
+Please see <https://www.tidymodels.org/> for a more comprehensive framework for modelling within the tidyverse.
 
 ## Installation
 
